<resources>
    <string name="app_name">Minecraft Server Control</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_server">Add Server</string>
    <string name="refresh">Refresh</string>

    <string name="server_name_prompt">Server Name:</string>
    <string name="server_address_prompt">IP/Hostname:</string>
    <string name="server_port_prompt">Server Port</string>
    <string name="server_query_port_prompt">Query Port:</string>
    <string name="server_rcon_port_prompt">Rcon Port:</string>
    <string name="server_rcon_password_prompt">Rcon Password:</string>
    <string name="title_activity_server">ServerActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="weather">Weather: </string>
    <string name="weather_clear">Clear</string>
    <string name="weather_rain">Rain</string>
    <string name="weather_thunder">Thunder</string>
    <string name="time">Time: </string>
    <string name="time_dawn">Dawn</string>
    <string name="time_noon">Noon</string>
    <string name="time_dusk">Dusk</string>
    <string name="time_midnight">Midnight</string>
</resources>
