<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_server"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.crowlhome.app.minecraftservercontrol.AddServerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:text="@string/server_name_prompt"
                android:paddingRight="4dp"/>

            <EditText
                android:id="@+id/server_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:text="@string/server_address_prompt"
                android:paddingRight="4dp"/>

            <EditText
                android:id="@+id/server_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:text="@string/server_query_port_prompt"
                android:paddingRight="4dp"/>

            <EditText
                android:id="@+id/query_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:text="@string/server_rcon_port_prompt"
                android:paddingRight="4dp"/>

            <EditText
                android:id="@+id/rcon_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_rcon_password_prompt"
                android:paddingRight="4dp"/>

            <EditText
                android:id="@+id/rcon_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <Button
            android:id="@+id/add_server_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_add_server"
            android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>
